--- a/src/app/package.json
+++ b/src/app/package.json
@@ -8,8 +8,15 @@
     "build": "next build"
   },
   "dependencies": {
+    "firebase": "4.8.0",
     "next": "^4.2.1",
+    "next-redux-saga": "^1.0.1",
+    "next-redux-wrapper": "^1.3.5",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   }
 }
