--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -9,12 +9,20 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "firebase": "4.8.0",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
     "next": "^4.2.1",
+    "next-redux-saga": "^1.0.1",
+    "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.2.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "private": true
 }
