--- a/src/app/.babelrc
+++ b/src/app/.babelrc
@@ -1,3 +1,10 @@
 {
-  "presets": ["next/babel", "react"]
+  "presets": ["next/babel", "react"],
+  "plugins": [
+    [
+      "module-resolver", {
+        "root": ["./"]
+      }
+    ]
+  ]
 }
