--- a/src/app/package.json
+++ b/src/app/package.json
@@ -8,6 +8,7 @@
     "build": "next build"
   },
   "dependencies": {
+    "babel-plugin-module-resolver": "^3.0.0",
     "firebase": "4.8.0",
     "next": "^4.2.1",
     "next-redux-saga": "^1.0.1",
