--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-runtime": "^6.26.0",
     "firebase": "4.8.0",
     "firebase-admin": "~5.4.2",
