--- a/src/app/package.json
+++ b/src/app/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build"
   },
   "dependencies": {
@@ -13,11 +13,15 @@
     "next": "^4.2.1",
     "next-redux-saga": "^1.0.1",
     "next-redux-wrapper": "^1.3.5",
+    "next-routes": "^1.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
+  },
+  "devDependencies": {
+    "express": "^4.16.2"
   }
 }
