--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "build-firebase": "cd \"src/functions\" && yarn"
   },
   "dependencies": {
-    "eslint": "^4.14.0"
+    "eslint": "^4.15.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3"
+  }
 }
