--- a/src/app/package.json
+++ b/src/app/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "babel-plugin-module-resolver": "^3.0.0",
     "firebase": "4.8.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "next": "^4.2.1",
     "next-redux-saga": "^1.0.1",
     "next-redux-wrapper": "^1.3.5",
