--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -14,6 +14,8 @@
     "firebase": "4.8.0",
     "firebase-admin": "~5.4.2",
     "firebase-functions": "^0.7.1",
+    "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "next": "^4.2.1",
     "next-redux-saga": "^1.0.1",
     "next-redux-wrapper": "^1.3.5",
