--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,10 @@
   "rules": {
     "react/jsx-filename-extension": "off",
     "react/jsx-curly-spacing": "off",
+    "react/jsx-closing-tag-location": "off",
     "react/prefer-stateless-function": "off",
     "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
