--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "build-next": "cd \"src/app\" && yarn && yarn build",
     "build-firebase": "cd \"src/functions\" && yarn"
   },
-  "dependencies": {
-    "eslint": "^4.15.0"
-  },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3"
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
