--- a/src/app/package.json
+++ b/src/app/package.json
@@ -16,6 +16,7 @@
     "next-redux-saga": "^1.0.1",
     "next-redux-wrapper": "^1.3.5",
     "next-routes": "^1.2.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
