SweetAlert 패키지를 추가한다

--- a/src/app/package.json
+++ b/src/app/package.json
@@ -23,7 +23,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "styled-jsx": "^2.2.1"
+    "styled-jsx": "^2.2.1",
+    "sweetalert2-react": "^0.5.0"
   },
   "devDependencies": {
     "express": "^4.16.2"
