--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -27,7 +27,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "styled-jsx": "^2.2.1"
+    "styled-jsx": "^2.2.1",
+    "sweetalert2-react": "^0.5.0"
   },
   "private": true
 }
